<resources>
    <string name="app_name">CycleCare</string>
    <string name="username_label">Nombre de usuario</string>
    <string name="btn_login">Ingresar</string>
    <string name="password_label">Contraseña</string>
    <string name="login_title">Ingresar</string>
    <string name="login_instruction">Inicia sesión para continuar</string>
    <string name="forgot_password_label"><u>Olvidé mi contraseña</u></string>
    <string name="register_label"><u>Regístrate aquí</u></string>
    <string name="no_account_label">¿No tienes cuenta?</string>
    <string name="forgot_password_title">Olvidé mi contraseña</string>
    <string name="restore_access_account">Recupera el acceso a tu cuenta.</string>
    <string name="restore_password_instruction">Ingresa el correo electrónico asociado a la cuenta que desea recuperar.</string>
    <string name="email_label">Correo electrónico</string>
    <string name="btn_send_email">Enviar correo</string>
    <string name="email_hint">cyclecare@gmail.com</string>
    <string name="verify_email_title">Verificar correo</string>
    <string name="check_your_mailbox_instruction">Revisa tu bandeja de entrada</string>
    <string name="register_new_account_title">Registrar nueva cuenta</string>
    <string name="register_account_instruction">¿Ya te has registrado?</string>
    <string name="name_register_account_label">* Introduce tu nombre</string>
    <string name="error_name_register_account_label">El nombre es incorrecto, deben ser solo letras</string>
    <string name="email_register_account_label">* Ingresa tu correo electrónico</string>
    <string name="email_error_register_account_label">Debes ingresar un email válido</string>
    <string name="user_register_account_label">* Introduce tu usuario</string>
    <string name="error_user_register_account_label">El usuario ya existe</string>
    <string name="password_register_account_label">* Introduce tu contraseña</string>
    <string name="error_password_register_account_label">Debe contener ocho caracteres, una minúscula, mayúscula y un caracter especial</string>
    <string name="birthday_register_account_label">* Introduce tu fecha de nacimiento</string>
    <string name="error_birthday_register_account_label">Debes seleccionar una fecha válida</string>
    <string name="register_account_button">Siguiente</string>
    <string name="birthday_datepicker_message">Seleccionar fecha de nacimiento</string>
    <string name="cycle_type_title_label">¿Cómo es tu ciclo?</string>
    <string name="cycle_description_label">El ciclo menstrual es el proceso mensual del cuerpo preparándose para un posible embarazo. Se considera regular cuando la duración entre períodos es constante (aproximadamente 21 a 35 días). Si hay variaciones significativas, se considera irregular.</string>
    <string name="regular_cycle_button">Regular</string>
    <string name="irregular_cycle_button">Irregular</string>
    <string name="idk_cycle_button">No lo sé</string>
    <string name="period_information_tittle">Información sobre tu periodo y ciclo menstrual</string>
    <string name="period_information_instructions">Esta información nos ayudará a ofrecerte mejores predicciones</string>
    <string name="period_duration_label">Usualmente, ¿Cuánto dura tu periodo?</string>
    <string name="cycle_duration_label">Usualmente, ¿Cuánto dura tu ciclo?</string>
    <string name="last_period_date_label">Fecha del último periodo</string>
    <string name="register_button">Registrarse</string>
    <string name="contenido_informativo">Contenido informativo</string>
    <string name="tittle_label">* Título</string>
    <string name="multimedia_content_label">* Contenido multimedia</string>
    <string name="multimedia_content_instructions_label">Agrega una imagen o vídeo, este será la portada del contenido informativo</string>
    <string name="valid_format_label">Formatos permitidos: MP4, PNG, JPG (max. 50 MB)</string>
    <string name="description_label">* Descripción</string>
    <string name="post_button">Publicar</string>
    <string name="post_tittle_label">Título de la publicación</string>
    <string name="author_content_label">Autor de la publicación</string>
    <string name="publish_date_label">XX/XX/XXXX</string>
    <string name="content_label">Contenido</string>
    <string name="code_verify_email_label">Código</string>
    <string name="confirm_code_button">Confirmar correo</string>
    <string name="resend_code_label"><u>Reenviar código</u></string>
    <string name="reminder_tittle_label">* Título del recordatorio</string>
    <string name="reminder_description_label">* Descripción del recordatorio</string>
    <string name="reminder_date_label">* Fecha del recordatorio</string>
    <string name="reminder_time_label">* Hora del recordatorio</string>
    <string name="save_reminder_button">Guardar recordatorio</string>
    <string name="reminder_fragment_tittle">Recordatorio</string>
    <string name="chart_bar_tittle">Esta semana</string>
    <string name="sleep_hours_prom_label">Promedio de horas de sueño</string>
    <string name="sleep_hours_label">XX Horas</string>
    <string name="my_content_tittle_label">Contenido publicado por mí</string>
    <string name="content_tittle_label">¿Sabes las diferencias entre un condón masculino y uno femenino?</string>
    <string name="author_label">Eduardo Carrera Colorado</string>
    <string name="date_label">XX/XX/XXXX</string>
    <string name="first_last_name_label">* Ingresa tu primer apellido</string>
    <string name="error_first_last_name_label">Apellido incorrecto</string>
    <string name="second_last_name_label">* Ingresa tu segundo apellido</string>
    <string name="error_second_last_name_label">Debes ingresar tu apellido correctamente</string>
    <string name="error_period_duration_label">La información entroducida es incorrecta</string>
    <string name="username_error_login">El nombre de usuario es incorrecto</string>
    <string name="password_error_login">Formato de contraseña inválido</string>
    <string name="password_confirm_error">Las contraseñas no coinciden</string>
    <string name="login_invalid_credentials_message">Usuario o contraseña incorrectos. Revisa tus credenciales.</string>
    <string name="login_server_error_message">Error en el servidor. Inténtalo más tarde.</string>
    <string name="login_fatal_error_message">Error inesperado. Inténtalo más tarde.</string>
    <string name="prev_month">Mes anterior\n</string>
    <string name="new_register_btn">Nuevo registro</string>
    <string name="days_for_next_label">Días para tu próximo período</string>
    <string name="cancel_register">Cancelar registro</string>
    <string name="save_log">Guardar registro\n</string>
    <string name="delete_reminder">Borrar recordatorio\n</string>
    <string name="role_not_supported">Rol no soportado</string>
    <string name="passwords_match_text_error">Las contraseñas deben coincidir</string>
    <string name="btn_change_password">Cambiar contraseña</string>
    <string name="lbl_confirm_password">CONFIRMAR CONTRASEÑA</string>
    <string name="lbl_new_password">Nueva contraseña</string>
    <string name="new_password_description">La contraseña debe tener al menos 8 caracteres e incluir al menos una mayúscula, una minúscula, un número y un carácter especial.</string>
    <string name="email_not_found">No se encontró el email ingresado. Intenta nuevamente</string>
    <string name="error_title_label">El título es incorrecto</string>
    <string name="error_description_label">La descripción debe ser menor a 200 caracteres</string>
    <string name="btn_edit">Editar</string>
    <string name="code_error_label">El código ingresado no cumple con las características de un código, revisa tu correo y vuelve a intentarlo.</string>
    <string name="new_password_bad_request_error">Verifique que la contraseña cumpla con los requisitos</string>
    <string name="new_password_not_found_error">No se encontró usuario para cambiar la contraseña</string>
    <string name="previous_month"><![CDATA[<]]></string>
    <string name="next_month_arrow"><![CDATA[>]]></string>
    <string name="cycle_log_no_prediction">No hay predicción</string>
    <string name="cycle_log_no_prediction_description">No se ha podido predecir la fecha de tu próximo periodo. Por favor, registra tus ciclos para obtener una predicción más precisa.</string>
    <string name="question_mark">\?</string>
    <string name="menstrual_phase">Menstruación</string>
    <string name="menstrual_phase_description">Durante la menstruación, el cuerpo de la mujer se deshace del revestimiento del útero. Esto dura de 3 a 7 días. Puedes experimentar calambres, fatiga y cambios de humor.</string>
    <string name="follicular_phase">Folicular</string>
    <string name="follicular_phase_description">Durante la fase folicular, los ovarios producen estrógeno, lo que ayuda a engrosar el revestimiento del útero. Te puedes sentir más energética y con mejor estado de ánimo.</string>
    <string name="ovulation_phase">Ovulación</string>
    <string name="ovulation_phase_description">Durante la ovulación, un óvulo es liberado de uno de los ovarios y se desplaza por las trompas de Falopio. Puedes sentir un aumento de energía, un ligero dolor abdominal y mayor libido.</string>
    <string name="luteal_phase">Lútea</string>
    <string name="luteal_phase_description">Durante la fase lútea, el folículo vacío que liberó el óvulo comienza a producir progesterona para preparar el útero para un posible embarazo. Puedes experimentar hinchazón, sensibilidad en los senos y cambios de humor.</string>
    <string name="abdominal_pain">Dolor abdominal</string>
    <string name="cycle_log_not_found">No se ha encontrado el registro del ciclo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>