<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            style="@style/TitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password_title" />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_access_account"
            android:textColor="@color/gray_blue"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/password_box_icon"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_password_instruction"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textColor="@color/gray_blue"
            android:textSize="16sp" />

        <EditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            style="@style/ButtonStyle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/btn_send_email"/>

    </LinearLayout>
</layout>