<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextViewStyle"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cycle_type_title_label"/>


        <GridLayout
            android:background="@drawable/rounded_background"
            android:layout_width="360dp"
            android:layout_height="210dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cycle_description_label"
                android:textSize="18sp"
                android:gravity="center"/>

        </GridLayout>

        <Button
            android:id="@+id/btn_regular"
            android:textAllCaps="false"
            style="@style/SecondButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="15sp"
            android:text="@string/regular_cycle_button"/>

        <Button
            android:id="@+id/btn_irregular"
            android:textAllCaps="false"
            style="@style/SecondButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="15sp"
            android:text="@string/irregular_cycle_button"/>

        <Button
            android:id="@+id/btn_idk"
            android:textAllCaps="false"
            style="@style/SecondButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:text="@string/idk_cycle_button"/>

    </LinearLayout>
</layout>